@@ -28,51 +28,6 @@ local *BAR;
 my $GLOB_OVERLOAD_FH = GlobOverload->new( \*BAR );
 
 my %tests = (
-    Any => {
-        accept => [
-            $ZERO,
-            $ONE,
-            $BOOL_OVERLOAD_TRUE,
-            $BOOL_OVERLOAD_FALSE,
-            $INT,
-            $NEG_INT,
-            $NUM,
-            $NEG_NUM,
-            $NUM_OVERLOAD_ZERO,
-            $NUM_OVERLOAD_ONE,
-            $NUM_OVERLOAD_NEG,
-            $NUM_OVERLOAD_NEG_DECIMAL,
-            $NUM_OVERLOAD_DECIMAL,
-            $EMPTY_STRING,
-            $STRING,
-            $NUM_IN_STRING,
-            $STR_OVERLOAD_EMPTY,
-            $STR_OVERLOAD_FULL,
-            $INT_WITH_NL1,
-            $INT_WITH_NL2,
-            $SCALAR_REF,
-            $SCALAR_REF_REF,
-            $SCALAR_OVERLOAD,
-            $ARRAY_REF,
-            $ARRAY_OVERLOAD,
-            $HASH_REF,
-            $HASH_OVERLOAD,
-            $CODE_REF,
-            $CODE_OVERLOAD,
-            $GLOB,
-            $GLOB_REF,
-            $GLOB_OVERLOAD,
-            $GLOB_OVERLOAD_FH,
-            $FH,
-            $FH_OBJECT,
-            $REGEX,
-            $REGEX_OBJ,
-            $REGEX_OVERLOAD,
-            $FAKE_REGEX,
-            $OBJECT,
-            $UNDEF,
-        ],
-    },
     Item => {
         accept => [
             $ZERO,
