@@ -5,6 +5,10 @@
 - Creating a subtype of a special type created by *_isa_type, *_can_type, or
   *_does_type, or enum would die when trying to inline type constraint.
 
+- Removed the never-documented Any type.
+
+- Added documentation for each type in Specio::Library::Builtins.
+
 
 0.26     2016-09-24
 
